# iree

integrations/pjrt/src/iree_pjrt/common/: BUILD.bazel  api_impl.cc  iree_helpers.h  stubs.inc
integrations/pjrt/src/iree_pjrt/cpu/: BUILD.bazel
integrations/pjrt/src/iree_pjrt/partitioner_api/: BUILD.bazel
